[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/models/melee2blade_idle.anim" type="Animation" id=1]
[ext_resource path="res://scripts/enemies/melee_enemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/other/Halo/Halo.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/models/melee2blade_stun.anim" type="Animation" id=4]
[ext_resource path="res://assets/models/melee2blade.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../AttackHitbox/CollisionShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AttackHitbox/CollisionShape2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Armature/Skeleton/BoneAttachment/Spatial:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -4.80412e-06, -22.661, -1.36604e-05 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Armature/Skeleton/BoneAttachment/Spatial:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.563767, 0.990519, 0.544919 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Armature/Skeleton/BoneAttachment2/Spatial:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.643108, 0.810053, 0.775041 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Armature/Skeleton/BoneAttachment2/Spatial:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 12.365, -39.685, -4.37024e-07 ) ]
}

[sub_resource type="CapsuleShape" id=1]
radius = 1.4256
height = 1.19925

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.36991, 0.378666, 0.241981 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.306013, 0.315031, 1.32673 )

[node name="Stabby" type="KinematicBody" groups=["enemies"]]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )
TURN_SPEED = 5.0
ATTACK_TIME = 2.4
PHYSICS_BONE = "collarboneR"
ANIM_PREFIX = "melee2blade"
ATTACK_ANIM_SPEED = 2.5
ATTACK_DISTANCE = 15
PLAYER_KNOCK_BACK_SPEED = 40
ATTACK_ANGLE = 0.9
DRAG = 0.01

[node name="Model" parent="." instance=ExtResource( 5 )]

[node name="Skeleton" parent="Model/Armature" index="0"]
bones/5/bound_children = [  ]
bones/9/bound_children = [  ]

[node name="Physical Bone root" parent="Model/Armature/Skeleton" index="1"]
transform = Transform( 0.984017, 0.095733, 0.150152, -0.173653, 0.702601, 0.690069, -0.0394339, -0.705116, 0.707996, -0.117413, -0.53961, -0.553629 )
joint_offset = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.45058e-08, -3.8743e-07, 0.781965 )
body_offset = Transform( 0.987012, 0.0976717, 0.127542, -0.145913, 0.877199, 0.457417, -0.0672028, -0.470088, 0.880058, -0.0997333, -0.357684, -0.688175 )

[node name="Physical Bone neck" parent="Model/Armature/Skeleton" index="2"]
transform = Transform( -0.0495277, -0.644559, 0.762948, -0.993162, 0.112638, 0.0306871, -0.105717, -0.756211, -0.645729, -0.687554, 1.28227, -0.724884 )
joint_offset = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.27705, -0.634583, 0.365693 )
body_offset = Transform( -0.0383987, -0.624061, 0.780431, -0.152793, 0.77549, 0.612591, -0.987512, -0.0957219, -0.12513, -0.692055, 0.225761, -0.288574 )

[node name="Physical Bone collarboneR" parent="Model/Armature/Skeleton" index="3"]
transform = Transform( 0.038941, 0.891969, -0.450417, -0.970577, 0.140947, 0.195206, 0.237604, 0.429564, 0.871216, 0.186262, 0.594199, -1.65342 )
joint_offset = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.459769, 0.234639, 0.833276 )
body_offset = Transform( 0.87902, -0.0750605, -0.470831, 0.131424, 0.987417, 0.0879475, 0.458305, -0.139188, 0.877828, 0.81409, -0.244546, -0.4881 )

[node name="Physical Bone bicepR" parent="Model/Armature/Skeleton" index="4"]
transform = Transform( -0.994386, 0.0728994, 0.0766801, 0.0142084, -0.626177, 0.779552, 0.104846, 0.776266, 0.621626, 0.148085, 0.433953, -1.3603 )
joint_offset = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.243974, 0.0751327, 1.11479 )
body_offset = Transform( 0.421121, 0.211663, -0.881961, -0.523194, 0.850993, -0.0455866, 0.740894, 0.480635, 0.469113, 1.07004, -0.140764, -0.378314 )

[node name="Physical Bone ForearmR" parent="Model/Armature/Skeleton" index="5"]
transform = Transform( -0.981696, 0.176162, 0.0723967, -0.133224, -0.906792, 0.399976, 0.136111, 0.383009, 0.913664, 1.18985, -0.370019, -0.789126 )
joint_offset = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.141119, -0.801897, 1.03375 )
body_offset = Transform( 0.688695, 0.64212, 0.336724, -0.38287, 0.716457, -0.583183, -0.61572, 0.272713, 0.739268, 0.0696377, 1.23142, -0.45864 )

[node name="Physical Bone collarboneL" parent="Model/Armature/Skeleton" index="6"]
transform = Transform( 0.363349, -0.750888, 0.551493, 0.903766, 0.427829, -0.0129275, -0.226239, 0.503117, 0.834079, -0.110099, 0.655333, -1.64236 )
joint_offset = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.401383, 0.529313, 0.636863 )
body_offset = Transform( 0.875512, 0.358286, 0.324205, -0.384486, 0.922948, 0.0183228, -0.29266, -0.140694, 0.945809, -0.747535, -0.345872, -0.410411 )

[node name="Physical Bone bicepL" parent="Model/Armature/Skeleton" index="7"]
transform = Transform( -0.342546, -0.898529, -0.274426, 0.846426, -0.421911, 0.324894, -0.407709, -0.12099, 0.905061, -0.172855, 0.965235, -1.59229 )
joint_offset = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0425209, 0.0288604, 1.0648 )
body_offset = Transform( 0.718065, 0.693172, 0.0624164, -0.695976, 0.715011, 0.0661691, 0.00123838, -0.0909537, 0.995855, -0.0559335, -0.120686, -1.05771 )

[node name="Physical Bone ForearmL" parent="Model/Armature/Skeleton" index="8"]
transform = Transform( -0.775869, -0.144543, 0.614114, 0.0998368, -0.989269, -0.106706, 0.622945, -0.0214788, 0.781972, -2.08934, 0.150793, -0.945592 )
joint_offset = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.585625, -0.544591, 1.16058 )
body_offset = Transform( 0.44611, -0.439208, -0.779797, 0.157335, 0.896223, -0.414773, 0.881041, 0.0623454, 0.468916, 0.927079, 1.06159, 0.00569955 )

[node name="Physical Bone pelvisR" parent="Model/Armature/Skeleton" index="9"]
transform = Transform( 0.067251, 0.938366, -0.339038, 0.770211, 0.16718, 0.615489, 0.634233, -0.302524, -0.711497, 0.0537649, -0.0976033, 0.112829 )
joint_offset = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.89762e-07, -3.14321e-07, 0.15858 )
body_offset = Transform( 0.878215, -0.142094, -0.45667, 0.145763, 0.98894, -0.0273955, 0.455512, -0.0425062, 0.889215, 0.0724192, 0.00434479, -0.141011 )

[node name="Physical Bone pelvisL" parent="Model/Armature/Skeleton" index="10"]
transform = Transform( -0.27572, -0.87609, 0.395531, -0.740013, 0.456077, 0.494343, -0.613482, -0.156398, -0.774067, -0.0627233, -0.0783926, 0.122751 )
joint_offset = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.9407e-08, -1.35973e-07, 0.158579 )
body_offset = Transform( 0.834245, -0.0582488, 0.548309, 0.146261, 0.98216, -0.118196, -0.531642, 0.178801, 0.827881, -0.0869505, 0.0187436, -0.131285 )

[node name="BoneAttachment" parent="Model/Armature/Skeleton" index="11"]
transform = Transform( -0.538593, 0.459853, 0.706012, -0.539339, -0.831928, 0.130423, 0.647327, -0.310535, 0.696087, 0.984887, 0.751809, -0.132553 )

[node name="Spatial" parent="Model/Armature/Skeleton/BoneAttachment" index="0"]
transform = Transform( 0.922802, 2.52318e-07, -0.385278, -2.38419e-07, 1, 8.38477e-08, 0.385278, 1.44829e-08, 0.922801, 0.563767, 0.990519, 0.544919 )

[node name="RemoteTransform" parent="Model/Armature/Skeleton/BoneAttachment/Spatial" index="0"]
remote_path = NodePath("../../../../../../AttackHitbox/CollisionShape")

[node name="BoneAttachment2" parent="Model/Armature/Skeleton" index="12"]
transform = Transform( -0.761523, -0.506329, -0.404616, 0.56224, -0.826633, -0.0237514, -0.322443, -0.245578, 0.914178, -0.843523, 0.507232, -0.391169 )

[node name="Spatial" parent="Model/Armature/Skeleton/BoneAttachment2" index="0"]
transform = Transform( 0.769567, -0.136742, -0.623754, -7.45058e-09, 0.976803, -0.214139, 0.638567, 0.164794, 0.751716, -0.643108, 0.810053, 0.775041 )

[node name="RemoteTransform" parent="Model/Armature/Skeleton/BoneAttachment2/Spatial" index="0"]
remote_path = NodePath("../../../../../../AttackHitbox/CollisionShape2")

[node name="AnimationPlayer" parent="Model" index="3"]
autoplay = "melee2blade_idle"
anims/RESET = SubResource( 3 )
anims/melee2blade_idle = ExtResource( 1 )
anims/melee2blade_stun = ExtResource( 4 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.20006, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Light" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.19642, -0.182277 )
light_energy = 2.15
light_indirect_energy = 0.0
light_specular = 0.37
omni_range = 5.6
omni_attenuation = 2.82843

[node name="NegLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.994454, -0.0804796 )
visible = false
light_energy = 0.99
light_indirect_energy = 0.0
light_negative = true
light_specular = 0.37
omni_range = 1.9
omni_attenuation = 1.62451

[node name="Halo" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0.00382447, 0.787192, -0.318156 )

[node name="CastPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.824959 )

[node name="AttackHitbox" type="Area" parent="."]
collision_layer = 0
collision_mask = 34

[node name="CollisionShape" type="CollisionShape" parent="AttackHitbox"]
transform = Transform( -0.225003, 0.459853, 0.859017, -0.447453, -0.831928, 0.32815, 0.865541, -0.310534, 0.392949, 1.58069, -1.39095, 0.331203 )
shape = SubResource( 2 )
disabled = true

[node name="CollisionShape2" type="CollisionShape" parent="AttackHitbox"]
transform = Transform( -0.844417, -0.45713, 0.279272, 0.417515, -0.888253, -0.19154, 0.335623, -0.0451392, 0.940915, -1.07753, -1.65073, 0.32579 )
shape = SubResource( 4 )
disabled = true

[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
[connection signal="area_entered" from="AttackHitbox" to="." method="_on_hit_attack"]
[connection signal="body_entered" from="AttackHitbox" to="." method="_on_hit_player"]

[editable path="Model"]
